# money_project

./: .gitignore  README.md  pyproject.toml
src/money_project/: __init__.py  db.sqlite3.bck  ledger.sh  manage.py
src/money_project/account/: admin.py  urls.py  views.py
src/money_project/account/accounting/: account.py  balance.py  expence.py
src/money_project/account/management/commands/: export.py  export_balance.py  export_transactions.py  ledger_export.py
src/money_project/account/migrations/: 0001_initial.py  0002_extratransactionmodel_include_in_statistics_and_more.py  0003_moneyaccountmodel_description.py  0004_alter_moneyaccountmodel_description.py  0005_moneyaccountmodel_show_in_overview.py  0006_moneyaccountmodel_include_in_statistics.py  0007_historicalcategorymodel_and_more.py  0008_historicalextratransactionmodel_and_more.py  0009_historicalcategorymodel_level_and_more.py  0010_ledgername_historicalledgername_and_more.py  0011_historicalledgername_common_name_and_more.py
src/money_project/account/models/: __init__.py  account.py  base.py  expense.py  extra.py  income.py  regular.py  transaction.py
src/money_project/account/templates/: home.html
src/money_project/account/templates/components/: account.html  upcoming.html
src/money_project/account/views/: home.py
src/money_project/money_project/: asgi.py  settings.py  urls.py  wsgi.py
src/money_project/static/css/: main.css
src/money_project/templates/: index.html  layout.html
src/money_project/templates/layout/: breadcrumbs.html  navbar.html
(+2 files in other folders)
